# neural-machine-translator

./: .env  .gitignore  README.md  batching.py  data.py  decode_nmt.py  diagnostics.py  logging_utils.py  main.py  nmt_cli.py  nmt_flax.py  paths.py  pyproject.toml  test_model_shapes.py  test_padding.py  test_vocab.py  tokenization.py  train_nmt.py  vocab.py
